--- a/.env-example
+++ b/.env-example
@@ -5,3 +5,4 @@ PLACAOCR_IMAGE_SIZE=640
 PLACAOCR_APIBRASIL_BASE_URL=https://gateway.apibrasil.io/api/v2/vehicles/base/001/consulta
 PLACAOCR_APIBRASIL_TOKEN=
 PLACAOCR_APIBRASIL_TIMEOUT=15
+PLACAOCR_DEBUG=false
