--- a/artifacts/runs/mercosur/args.yaml
+++ b/artifacts/runs/mercosur/args.yaml
@@ -1,28 +1,28 @@
 task: detect
 mode: train
-model: yolov8n.pt
+model: yolov8s.pt
 data: data/yolo/mercosur-license-plates.yaml
-epochs: 1
+epochs: 100
 time: null
-patience: 100
-batch: 16
-imgsz: 640
+patience: 50
+batch: -1
+imgsz: 960
 save: true
 save_period: -1
-cache: false
+cache: ram
 device: cpu
 workers: 8
 project: artifacts/runs
 name: mercosur
 exist_ok: true
 pretrained: true
-optimizer: auto
+optimizer: AdamW
 verbose: true
-seed: 0
+seed: 42
 deterministic: true
 single_cls: false
 rect: false
-cos_lr: false
+cos_lr: true
 close_mosaic: 10
 resume: false
 amp: true
@@ -70,11 +70,11 @@ simplify: true
 opset: null
 workspace: null
 nms: false
-lr0: 0.01
-lrf: 0.01
-momentum: 0.937
+lr0: 0.002
+lrf: 0.1
+momentum: 0.9
 weight_decay: 0.0005
-warmup_epochs: 3.0
+warmup_epochs: 3
 warmup_momentum: 0.8
 warmup_bias_lr: 0.1
 box: 7.5
@@ -86,18 +86,18 @@ nbs: 64
 hsv_h: 0.015
 hsv_s: 0.7
 hsv_v: 0.4
-degrees: 0.0
+degrees: 5.0
 translate: 0.1
 scale: 0.5
-shear: 0.0
-perspective: 0.0
+shear: 2.0
+perspective: 0.0005
 flipud: 0.0
 fliplr: 0.5
 bgr: 0.0
 mosaic: 1.0
-mixup: 0.0
+mixup: 0.05
 cutmix: 0.0
-copy_paste: 0.0
+copy_paste: 0.1
 copy_paste_mode: flip
 auto_augment: randaugment
 erasing: 0.4
