--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ ultralytics==8.3.202
 numpy==2.3.0
 opencv-python==4.10.0.84
 pillow==11.3.0
+pytesseract==0.3.10
 python-multipart==0.0.9
 dotenv==0.9.9
 httpx==0.27.2
